# serializer version: 1
# name: test_setup[binary_sensor.mock_reeflex_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.mock_reeflex_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.LIGHT: 'light'>,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'is_lighting',
    'unique_id': '00:00:00:00:00:05_is_lighting',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[binary_sensor.mock_reeflex_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'light',
      'friendly_name': 'Mock reeflex Light',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mock_reeflex_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup[binary_sensor.mock_reeflex_uvc_lamp_connected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mock_reeflex_uvc_lamp_connected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'UVC lamp connected',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'UVC lamp connected',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'is_uvc_connected',
    'unique_id': '00:00:00:00:00:05_is_uvc_connected',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[binary_sensor.mock_reeflex_uvc_lamp_connected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Mock reeflex UVC lamp connected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mock_reeflex_uvc_lamp_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
